detalles con los crud

--- a/FRONT-END/src/app/modules/return-provider/return-provider.component.html
+++ b/FRONT-END/src/app/modules/return-provider/return-provider.component.html
@@ -6,10 +6,10 @@
 [canDelete]="false" 
 [canExport]="false" 
 [canEdit]="false"
-
 [canSeeDetail]="false"
-[canChangeStatus]="true"
-[showStateColumn]="true"
+
+[canChangeStatus]="false"
+[showStateColumn]="false"
 [statusField]="'estado'"
 
 [actions]="false" 
