--- a/FRONT-END/src/app/shared/crud/crud.component.css
+++ b/FRONT-END/src/app/shared/crud/crud.component.css
@@ -1,45 +1,51 @@
 .container-crud {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .create-button {
-    background-color: #4299e1; /* Color de fondo azul */
-    color: white;
-    padding: 7px 16px;
-    border: none;
-    border-radius: 4px;
-    margin-right: auto; /* Asegura que el botón esté a la izquierda */
-  }
-  
-  .right-side {
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-field {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 8px;
-    width: 200px; /* Ajusta el ancho según necesites */
-    margin-right: 8px; /* Pequeño margen a la derecha del campo de búsqueda */
-  }
-  
-  .status-filter {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 8px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-.colunms{
-    background-color: rgb(241, 239, 239);
+.create-button {
+  background-color: #4299e1;
+  /* Color de fondo azul */
+  color: white;
+  padding: 7px 16px;
+  border: none;
+  border-radius: 4px;
+  margin-right: auto;
+  /* Asegura que el botón esté a la izquierda */
+}
+
+.right-side {
+  display: flex;
+  align-items: center;
+}
+
+.search-field {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+  width: 200px;
+  /* Ajusta el ancho según necesites */
+  margin-right: 8px;
+  /* Pequeño margen a la derecha del campo de búsqueda */
+}
+
+.status-filter {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.colunms {
+  background-color: rgb(241, 239, 239);
 }
 
 /* Estilos globales o de componente */
 .uniform-button {
-  width: 100px; /* Ajusta el tamaño según tus necesidades */
-  height: 30px; /* Ajusta el tamaño según tus necesidades */
+  width: 100px;
+  /* Ajusta el tamaño según tus necesidades */
+  height: 30px;
+  /* Ajusta el tamaño según tus necesidades */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,7 +55,8 @@
 .field-group {
   display: flex;
   justify-content: space-between;
-  gap: 1rem; /* Ajusta el espacio entre campos */
+  gap: 1rem;
+  /* Ajusta el espacio entre campos */
 }
 
 .field {
@@ -63,22 +70,21 @@
 }
 
 .p-inputtext {
-    /* Asegura que este estilo se aplique correctamente */
-    border: 1px solid #ccc !important;
-    padding: 8px !important;
-  }
+  /* Asegura que este estilo se aplique correctamente */
+  border: 1px solid #ccc !important;
+  padding: 8px !important;
+}
 
-  .image-cell {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .image-cell img {
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 100px;
-    height: auto;
-    object-fit: cover;
-  }
-  
+.image-cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-cell img {
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 100px;
+  height: auto;
+  object-fit: cover;
+}
