--- a/FRONT-END/src/styles.css
+++ b/FRONT-END/src/styles.css
@@ -3,6 +3,8 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeng/resources/primeng.min.css";
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 @import "primeicons/primeicons.css";
 
 /* Toastr */
