--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar">
   <div class="mt-5">
     <ul>
-      <li class="item" routerLink="/dashboard"><a>Inicio</a></li>
+      <li class="item" routerLink="/dashboard"><i class="bi bi-house mr-2" style="color:darkred;"></i><a>Inicio</a></li>
 
       <li>
         <a (click)="toggleSubmenuConfig()"><i class="bi bi-gear mr-2" style="color:darkcyan;"></i>
