--- a/FRONT-END/src/app/shared/crud/crud.component.css
+++ b/FRONT-END/src/app/shared/crud/crud.component.css
@@ -6,13 +6,11 @@
 
 .create-button {
   background-color: #4299e1;
-  /* Color de fondo azul */
   color: white;
   padding: 7px 16px;
   border: none;
   border-radius: 4px;
   margin-right: auto;
-  /* Asegura que el botón esté a la izquierda */
 }
 
 .right-side {
@@ -25,9 +23,7 @@
   border-radius: 4px;
   padding: 8px;
   width: 200px;
-  /* Ajusta el ancho según necesites */
   margin-right: 8px;
-  /* Pequeño margen a la derecha del campo de búsqueda */
 }
 
 .status-filter {
@@ -43,9 +39,7 @@
 /* Estilos globales o de componente */
 .uniform-button {
   width: 100px;
-  /* Ajusta el tamaño según tus necesidades */
   height: 30px;
-  /* Ajusta el tamaño según tus necesidades */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -56,7 +50,6 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-  /* Ajusta el espacio entre campos */
 }
 
 .field {
@@ -70,7 +63,6 @@
 }
 
 .p-inputtext {
-  /* Asegura que este estilo se aplique correctamente */
   border: 1px solid #ccc !important;
   padding: 8px !important;
 }
@@ -87,4 +79,45 @@
   max-width: 100px;
   height: auto;
   object-fit: cover;
+}
+
+/* TABLA RESPONSIVA */
+
+.table-container {
+  overflow-x: auto; /* Habilita el desplazamiento horizontal si la tabla es demasiado ancha */
+  -webkit-overflow-scrolling: touch; /* Habilita el desplazamiento suave en dispositivos táctiles */
+}
+
+/* Opcional: Asegúrate de que la tabla ocupe el 100% del ancho del contenedor */
+.table-container table {
+  width: 100%;
+  border-collapse: collapse; /* Asegura que las celdas se colapsen correctamente */
+}
+
+.p-table td, .p-table th {
+  word-wrap: break-word; /* Rompe el texto largo para evitar desbordamiento */
+  white-space: nowrap; /* Impide que el texto se ajuste automáticamente a múltiples líneas */
+}
+
+/* HEADER RESPONSIVE */
+.search-input {
+  max-width: 200px; /* Ajusta el ancho máximo del campo de búsqueda */
+  width: 100%; /* Hace que el input ocupe el 100% del contenedor disponible */
+  padding: 8px;
+  box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
+}
+
+@media (max-width: 768px) {
+  .search-input {
+    max-width: 100px; /* Reduce el ancho máximo en pantallas pequeñas */
+  }
+
+  .flex-wrap {
+    flex-direction: row; /* Alinea los elementos en una fila en pantallas pequeñas */
+    align-items: center; /* Alinea los elementos verticalmente en el centro */
+  }
+
+  .flex-grow {
+    flex: 1; /* Hace que el contenedor crezca para ocupar el espacio disponible */
+  }
 }
