--- a/FRONT-END/src/app/layout/main-layout/layout.component.css
+++ b/FRONT-END/src/app/layout/main-layout/layout.component.css
@@ -1,7 +1,20 @@
-.layout{
-    background-color: blue;
-}
-.content-wrapper {
-    display: flex;
-    flex: 1;
+@media (max-width: 768px) {
+  .overlay {
+    position: fixed;
+    top: 0rem;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 998;
+    transition: opacity 0.3s ease;
+  }
+  
+  .overlay.show {
+    display: block;
+  }
+
+  .overlay {
+    z-index: 2500;
+  }
 }
