--- a/FRONT-END/src/app/layout/main-layout/layout.component.html
+++ b/FRONT-END/src/app/layout/main-layout/layout.component.html
@@ -1,12 +1,9 @@
-
 <div class="layout">
-  <app-sidebar [class.hidden]="!isSidebarVisible"></app-sidebar>
-  <div class="flex flex-col flex-1">
-    <app-topbar (toggleSidebar)="toggleSidebar()"></app-topbar>
-    <div class="flex-1 p-4 bg-gray-100">
-      <app-content [isSidebarVisible]="isSidebarVisible"></app-content>
-<p-confirmDialog></p-confirmDialog>
-
-    </div>
+  <app-topbar (toggleSidebar)="toggleSidebar()"></app-topbar>
+  <app-sidebar [isSidebarVisible]="isSidebarVisible" (sidebarClosed)="closeSidebar()"></app-sidebar>
+  <div class="overlay" *ngIf="isSidebarVisible && isMobile" (click)="closeSidebar()"></div>
+  <div class="flex-1 p-4 bg-gray-100">
+    <app-content [isSidebarVisible]="isSidebarVisible"></app-content>
+    <p-confirmDialog></p-confirmDialog>
   </div>
 </div>
