--- a/FRONT-END/src/app/shared/crud/crud.component.html
+++ b/FRONT-END/src/app/shared/crud/crud.component.html
@@ -1,74 +1,81 @@
 <div class="card">
-  <div class="flex justify-between mb-3 items-center">
-    <div class="flex space-x-2">
+  <div class="flex flex-wrap items-center mb-3">
+    <div class="flex items-center space-x-2 flex-grow">
       <button *ngIf="canCreate" pButton pRipple label="Nuevo" icon="pi pi-plus"
         class="p-button-success p-button-rounded p-button-outlined" (click)="onCreate()"></button>
-    </div>
-    <div class="relative ml-auto flex items-center space-x-2">
       <button *ngIf="canExport" pButton pRipple label="Exportar" icon="pi pi-download"
-        class="p-button-help p-button-rounded p-button-outlined " (click)="onExport()"></button>
-      <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar" class="pr-10" />
+        class="p-button-help p-button-rounded p-button-outlined" (click)="onExport()"></button>
+    </div>
+    <div class="relative flex items-center space-x-2 ml-auto">
+      <input pInputText type="text" [(ngModel)]="searchQuery" (input)="onSearch()" placeholder="Buscar" class="search-input" />
       <i *ngIf="searchQuery"
         class="pi pi-times absolute top-3 right-3 transform -translate-y-1/2 cursor-pointer text-gray-500"
         (click)="clearSearch()"></i>
     </div>
-  </div>
+  </div>  
 
-  <p-table [value]="items" [tableStyle]="{'min-width': '50rem', 'margin': '0 auto', 'text-align': 'center'}"
-    sortMode="multiple" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
-    currentPageReportTemplate="Mostrando de {first} a {last} de {totalRecords} registros"
-    [rowsPerPageOptions]="[5, 10, 25]">
-
-    <!-- Encabezado de la tabla -->
-    <ng-template pTemplate="header">
-      <tr>
-        <th *ngFor="let col of columns" [pSortableColumn]="col.field" [style]="{'text-align': 'center'}">
-          {{col.header}} <p-sortIcon [field]="col.field"></p-sortIcon>
-        </th>
-        <th *ngIf="showStateColumn" [style]="{'text-align': 'center'}">Estado</th>
-        <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Abonar</th>
-        <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Historial</th>
-        <th *ngIf="actions" [style]="{'text-align': 'center'}">Acciones</th>
-      </tr>
-    </ng-template>
-
-    <!-- Cuerpo de la tabla -->
-    <ng-template pTemplate="body" let-item>
-      <tr>
-        <td *ngFor="let col of columns"
+  <div class="table-container">
+    <p-table [value]="items" [tableStyle]="{'min-width': '50rem', 'margin': '0 auto', 'text-align': 'center'}"
+      sortMode="multiple" [paginator]="true" [rows]="5" [showCurrentPageReport]="true"
+      currentPageReportTemplate="Mostrando {last} de {totalRecords} registros"
+      [rowsPerPageOptions]="[5, 10, 25]">
+  
+      <!-- Encabezado de la tabla -->
+      <ng-template pTemplate="header">
+        <tr>
+          <th *ngFor="let col of columns" [pSortableColumn]="col.field" [style]="{'text-align': 'center'}">
+            {{col.header}} <p-sortIcon [field]="col.field"></p-sortIcon>
+          </th>
+          <th *ngIf="showStateColumn" [style]="{'text-align': 'center'}">Estado</th>
+          <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Abonar</th>
+          <th *ngIf="creditColumn" [style]="{'text-align': 'center'}">Historial</th>
+          <th *ngIf="actions" [style]="{'text-align': 'center'}">Acciones</th>
+        </tr>
+      </ng-template>
+  
+      <!-- Cuerpo de la tabla -->
+      <ng-template pTemplate="body" let-item>
+        <tr>
+          <td *ngFor="let col of columns"
           [style]="{'word-wrap': 'break-word', 'white-space': 'normal', 'text-align': 'center'}">
-          {{item[col.field]}}
+          <!-- Valida si el valor es una URL de imagen -->
+          <ng-container *ngIf="col.field === 'imagenProducto'; else textContent">
+            <img *ngIf="item[col.field]" [src]="getImageUrl(item.idProducto)" alt="{{item[col.field]}}" class="w-24 h-24 object-cover"/>
+          </ng-container>
+  
+          <ng-template #textContent>
+            {{item[col.field]}}
+          </ng-template>
         </td>
-
-        <td *ngIf="canInstallment" [style]="{'text-align': 'center'}">
-          <button *ngIf="canInstallment" pButton pRipple icon="pi pi-money-bill"
-            class="p-button-rounded p-button-success p-button-outlined p-button-sm mr-2"
-            (click)="onInstallment(item)"></button>
-        </td>
-
-        <td *ngIf="canChangeStatus" [style]="{'text-align': 'center'}">
-          <div class="flex justify-center items-center">
-            <p-button [rounded]="true" [label]="getStatus(item) ? 'Activo' : 'Inactivo'"
-              [styleClass]="getStatus(item) ? 'true-chip tipo-chip' : 'false-chip tipo-chip'"
-              (onClick)="confirmChangeStatus(item)"></p-button>
-          </div>
-        </td>
-        
-
-        <td [style]="{'text-align': 'center'}">
-          <div class="flex justify-center">
-            <button *ngIf="canEdit" pButton pRipple icon="pi pi-pencil"
-              class="p-button-rounded p-button-info p-button-outlined p-button-sm mr-2" (click)="onEdit(item)"></button>
-            <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash"
-              class="p-button-rounded p-button-danger p-button-outlined p-button-sm mr-2"
-              (click)="onDelete(item)"></button>
-            <button *ngIf="canSeeDetail" pButton pRipple icon="pi pi-eye"
-              class="p-button-rounded p-button-warning p-button-outlined p-button-sm" (click)="onDetail(item)"></button>
-          </div>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
-
-
+  
+          <td *ngIf="canInstallment" [style]="{'text-align': 'center'}">
+            <button *ngIf="canInstallment" pButton pRipple icon="pi pi-money-bill"
+              class="p-button-rounded p-button-success p-button-outlined p-button-sm mr-2"
+              (click)="onInstallment(item)"></button>
+          </td>
+  
+          <td *ngIf="canChangeStatus" [style]="{'text-align': 'center'}">
+            <div class="flex justify-center items-center">
+              <p-button [rounded]="true" [label]="getStatus(item) ? 'Activo' : 'Inactivo'"
+                [styleClass]="getStatus(item) ? 'true-chip tipo-chip' : 'false-chip tipo-chip'"
+                (onClick)="confirmChangeStatus(item)"></p-button>
+            </div>
+          </td>
+          
+  
+          <td [style]="{'text-align': 'center'}">
+            <div class="flex justify-center">
+              <button *ngIf="canEdit" pButton pRipple icon="pi pi-pencil"
+                class="p-button-rounded p-button-info p-button-outlined p-button-sm mr-2" (click)="onEdit(item)"></button>
+              <button *ngIf="canDelete" pButton pRipple icon="pi pi-trash"
+                class="p-button-rounded p-button-danger p-button-outlined p-button-sm mr-2"
+                (click)="onDelete(item)"></button>
+              <button *ngIf="canSeeDetail" pButton pRipple icon="pi pi-eye"
+                class="p-button-rounded p-button-warning p-button-outlined p-button-sm" (click)="onDetail(item)"></button>
+            </div>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
