--- a/FRONT-END/src/app/modules/categories/categories.component.html
+++ b/FRONT-END/src/app/modules/categories/categories.component.html
@@ -1,5 +1,6 @@
+<h2 class="title" style="text-align: center;">Categoria de productos</h2>
+
 <!-- PLANTILLA CRUD -->
- 
 <!-- aqui se llaman  las funciones definidas en el component.ts -->
 <app-crud 
     [items]="filteredCategories"
