--- a/FRONT-END/src/app/modules/providers/providers.component.html
+++ b/FRONT-END/src/app/modules/providers/providers.component.html
@@ -1,3 +1,5 @@
+<h2 class="title" style="text-align: center;">Proveedores</h2>
+
 <!-- PLANTILLA CRUD -->
 <app-crud 
   [items]="filteredProviders" 
