--- a/FRONT-END/src/app/layout/sidebar/sidebar.component.html
+++ b/FRONT-END/src/app/layout/sidebar/sidebar.component.html
@@ -2,20 +2,6 @@
 <nav class="sidebar" [ngClass]="{'open': isSidebarVisible, 'collapsed': !isSidebarVisible}">
   <div class="mt-5">
     <ul>
-<<<<<<< HEAD
-      <li class="item" routerLink="/dashboard"><i class="bi bi-house mr-2" style="color:darkred;"></i><a>Dashboard</a></li>
-
-      <li>
-        <a (click)="toggleSubmenuShoppings()"><i class="pi pi-shop mr-2" style="color:blueviolet"></i>
-          Compras</a>
-        <ul *ngIf="isSubmenuOpenShoppings" class="submenu">
-          <li class="item" routerLink="/categories"><a><i class="bi bi-tag-fill mr-2"
-                style="color:salmon;"></i>Categorías</a></li>
-          <li class="item" routerLink="/products"><i class="bi bi-bag mr-2"
-              style="color:springgreen;"></i><a>Productos</a></li>
-          <li class="item" routerLink="/providers"><i class="pi pi-truck mr-2" style="color: yellowgreen"></i><a>Proveedores</a></li>
-          <li class="item" routerLink="/shoppings"><i class="bi bi-basket2 mr-2" style="color:hotpink"></i><a>Compras</a></li>
-=======
       <li class="item" routerLink="/dashboard" routerLinkActive="active">
         <i class="bi bi-house mr-2" style="color:#C62828;"></i><a>Inicio</a>
       </li>
@@ -34,6 +20,9 @@
           </li>
           <li class="item" routerLink="/providers" routerLinkActive="active" (click)="closeSidebar()">
             <i class="pi pi-truck mr-2" style="color:yellowgreen;"></i><a>Proveedores</a>
+          </li>
+          <li class="item" routerLink="/shoppings" routerLinkActive="active" (click)="closeSidebar()">
+            <i class="bi bi-basket2 mr-2" style="color:crimson;"></i><a>Compras</a>
           </li>
         </ul>
         
@@ -54,31 +43,10 @@
           <li class="item" routerLink="/credits" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-credit-card mr-2" style="color:yellowgreen;"></i><a>Créditos</a>
           </li>
->>>>>>> ee7400ad81c307c0bfe8a79162304639d8d20b8b
         </ul>
       </li>
 
       <li>
-<<<<<<< HEAD
-        <a (click)="toggleSubmenuSales()"><i class="bi bi-cart3 mr-3" style="color:saddlebrown;"></i>Ventas</a>
-        <ul *ngIf="isSubmenuOpenSales" class="submenu">
-          <li class="item" routerLink="/clients"><i class="bi bi-person-vcard mr-2"
-              style="color: salmon;"></i><a>Clientes</a></li>
-          <li class="item" routerLink="/sales"><i class="bi bi-cash-coin mr-2"
-              style="color: springgreen;"></i><a>Ventas</a></li>
-          <li class="item" routerLink="/credits"><i class="bi bi-credit-card  mr-2"
-              style="color: yellowgreen;"></i><a>Créditos</a></li>
-
-          <li>
-            <a (click)="toggleSubmenuReturns()"><i class="pi pi-sync mr-1" style="color: mediumpurple;"></i>Devoluciones</a>
-            <!-- Submenu que se despliega cuando isSubmenuOpen es true -->
-            <ul *ngIf="isSubmenuOpenReturns" class="submenu">
-              <li class="item" routerLink="/loss"><i class="pi pi-exclamation-circle mr-2"
-                style="color: salmon;"></i><a>Pérdidas</a></li>
-              <li class="item" routerLink="/returProvider"><i class="bi bi-bandaid mr-2" style="color: springgreen;"></i><a>Proveeedor</a></li>
-              <li class="item" routerLink="/returnSale"><i class="bi bi-piggy-bank mr-2" style="color: yellowgreen;"></i><a>Venta</a></li>
-            </ul>
-=======
         <a (click)="toggleSubmenu('Returns')" class="menu-link">
           <i class="pi pi-sync mr-2" style="color:#7B1FA2;"></i>Devoluciones
           <i class="bi" [ngClass]="{'bi-chevron-right': !isSubmenuOpen('Returns'), 'bi-chevron-down': isSubmenuOpen('Returns')}" style="float:right;"></i>
@@ -92,24 +60,11 @@
           </li>
           <li class="item" routerLink="/returnSale" routerLinkActive="active" (click)="closeSidebar()">
             <i class="bi bi-piggy-bank mr-2" style="color:yellowgreen;"></i><a>Venta</a>
->>>>>>> ee7400ad81c307c0bfe8a79162304639d8d20b8b
           </li>
         </ul>
       </li>
 
       <li>
-<<<<<<< HEAD
-        <a (click)="toggleSubmenuConfig()"><i class="bi bi-gear mr-2" style="color:darkcyan;"></i>
-          Configuración</a>
-        <ul *ngIf="isSubmenuOpenConfig" class="submenu">
-          <li class="item" routerLink="/roles"><i class="bi bi-suitcase-lg mr-2" style="color: salmon;"></i><a>Roles</a>
-          </li>
-          <li class="item" routerLink="/users"><i class="bi bi-person-lines-fill mr-2"
-            style="color: springgreen;"></i><a>Usuarios</a></li>
-        </ul>
-      </li>
-
-=======
         <a (click)="toggleSubmenu('config')" class="menu-link">
           <i class="bi bi-gear mr-2" style="color:darkcyan;"></i>Configuración
           <i class="bi" [ngClass]="{'bi-chevron-right': !isSubmenuOpen('config'), 'bi-chevron-down': isSubmenuOpen('config')}" style="float:right;"></i>
@@ -124,7 +79,6 @@
         </ul>
       </li>
       
->>>>>>> ee7400ad81c307c0bfe8a79162304639d8d20b8b
     </ul>
   </div>
 </nav>
