--- a/FRONT-END/src/app/modules/shoppings/shoppings.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shoppings.component.html
@@ -1,103 +1,93 @@
 <h2 class="title" style="text-align: center;">Compras</h2>
 
+<form [formGroup]="shoppingForm" (ngSubmit)="saveShopping()" class="shopping-form">
+    <!-- Formulario de Compra (Shoppings) -->
 
-<div class="grid" style="display: flex; flex-wrap: wrap;">
-    <!-- Primer div -->
-    <div class="col-12 md:col-6 lg:col-3 custom-width">
-        <div class="surface-card shadow-2 p-3 border-round">
-            <div class="flex justify-content-between mb-3">
-                <div>
-                    <span class="block text-500 font-medium mb-3">Orders</span>
-                    <div class="text-900 font-medium text-xl">152</div>
-                </div>
-                <div class="flex align-items-center justify-content-center bg-blue-100 border-round"
-                    style="width:2.5rem;height:2.5rem">
-                    <i class="pi pi-shopping-cart text-blue-500 text-xl"></i>
-                </div>
-            </div>
-            <span class="text-green-500 font-medium">24 new </span>
-            <span class="text-500">since last visit</span>
-        </div>
-    </div>
+    <div class="field-group">
 
-    <!-- Segundo div -->
-    <div class="col-12 md:col-6 lg:col-3 tabla">
-        <div class="shadow-2 p-3 border-round">
-            <div class="card mt-4">
-                <table class="p-datatable p-component">
-                    <thead>
-                        <tr>
-                            <th class="p-sortable-column">Column 1</th>
-                            <th class="p-sortable-column">Column 2</th>
-                            <th class="p-sortable-column">Column 3</th>
-                            <th>Estado</th>
-                            <th>Acciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Data 1</td>
-                            <td>Data 2</td>
-                            <td>Data 3</td>
-                            <td>
-                                <p-button label="Activo" class="p-button-rounded p-button-success"></p-button>
-                            </td>
-                            <td>
-                                <button pButton icon="pi pi-eye" class="p-button-rounded p-button-warning"></button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div class="field" [ngClass]="{'error': isFieldInvalid('idProveedor')}">
+            <label for="proveedor">Proveedor</label>
+            <div class="p-inputgroup">
+                <p-dropdown [options]="providers" formControlName="idProveedor" optionLabel="nombreProveedor"
+                    optionValue="idProveedor" placeholder="Seleccionar proveedor" [virtualScroll]="false"
+                    [virtualScrollItemSize]="38" styleClass="w-full">
+                </p-dropdown>
             </div>
         </div>
+
+        <div class="field" [ngClass]="{'error': isFieldInvalid('fechaCompra')}">
+            <label for="fechaCompra">fecha Compra</label>
+            <input type="date" pInputText id="fechaCompra" formControlName="fechaCompra" required autofocus />
+            <small class="p-error" *ngIf="isFieldInvalid('fechaCompra')">
+                {{ getErrorMessage('fechaCompra') }}
+            </small>
+        </div>
+
     </div>
-    
 
-    <!-- Tercer div -->
 
-    <div class="col-12 md:col-6 lg:col-3 custom-width">
-        <div class="surface-card shadow-2 p-3 border-round">
-            <form [formGroup]="shoppingForm" class="p-fluid">
-                <div class="field-group">
-                    <!-- Nombre Categoría -->
-                    <div class="field" [ngClass]="{'error': isFieldInvalid('nombreCategoria')}">
-                        <label for="nombreCategoria" class="small-label">Proveedor</label>
-                        <input type="text" pInputText id="nombreCategoria" formControlName="nombreCategoria" class="small-input" required />
-                        <small class="p-error" *ngIf="isFieldInvalid('nombreCategoria')">
-                            {{ getErrorMessage('nombreCategoria') }}
-                        </small>
-                    </div>
-    
-                    <!-- Descripción -->
-                    <div class="field" [ngClass]="{'error': isFieldInvalid('descripcionCategoria')}">
-                        <label for="descripcionCategoria" class="small-label">fecha compra</label>
-                        <input type="date" pInputText id="descripcionCategoria" formControlName="descripcionCategoria" class="small-input" />
-                        <small class="p-error" *ngIf="isFieldInvalid('descripcionCategoria')">
-                            {{ getErrorMessage('descripcionCategoria') }}
-                        </small>
-                    </div>
-    
-                    <!-- numero factura -->
-                    <div class="field" [ngClass]="{'error': isFieldInvalid('nombreCategoria')}">
-                        <label for="nombreCategoria" class="small-label">numero factura</label>
-                        <input type="text" pInputText id="nombreCategoria" formControlName="nombreCategoria" class="small-input" required />
-                        <small class="p-error" *ngIf="isFieldInvalid('nombreCategoria')">
-                            {{ getErrorMessage('nombreCategoria') }}
-                        </small>
-                    </div>
 
-                    <button type="button" class="btn btn-primary">sub</button>
-                    <button type="button" class="btn btn-primary">c</button>
+
+
+    <div class="field-group mb-5">
+
+        <div class="field" [ngClass]="{'error': isFieldInvalid('numeroFactura')}">
+            <label for="numeroFactura">numero Factura</label>
+            <input type="number" pInputText id="numeroFactura" formControlName="numeroFactura" required autofocus />
+            <small class="p-error" *ngIf="isFieldInvalid('numeroFactura')">
+                {{ getErrorMessage('numeroFactura') }}
+            </small>
+        </div>
+
+        <div class="field">
+            <label for="valorCompra">valor Compra</label>
+            <input type="number" pInputText id="valorCompra" formControlName="valorCompra" autofocus />
+        </div>
+
+    </div>
+
+    <div class="divider"></div>
+
+    <!-- Formulario de Detalles de Compra (ShoppingDetails) -->
+    <div formArrayName="detalles" class="details-container">
+        <div *ngFor="let detail of detalles.controls; let i = index" class="details-row">
+            <div class="field" [ngClass]="{'error': isFieldInvalid('idProducto')}">
+                <label for="producto">Producto</label>
+                <div class="p-inputgroup">
+                    <p-autoComplete formControlName="idProducto" [suggestions]="filteredProducts"
+                        (completeMethod)="searchProduct($event)" field="nombreProducto" [dropdown]="true"
+                        placeholder="Buscar" [forceSelection]="true" styleClass="w-full">
+                    </p-autoComplete>
                 </div>
-            </form>
+            </div>
+            <div class="field">
+                <label for="codigoBarra">Código de Barra:</label>
+                <input type="text" formControlName="codigoBarra" pInputText>
+            </div>
+            <div class="field">
+                <label for="cantidadProducto">Cantidad:</label>
+                <input type="number" formControlName="cantidadProducto" (input)="calculateSubtotal(i)" pInputText>
+            </div>
+            <div class="field">
+                <label for="precioCompraUnidad">Precio x Unidad:</label>
+                <input type="number" formControlName="precioCompraUnidad" (input)="calculateSubtotal(i)" pInputText>
+            </div>
+
+            <div class="field">
+                <label>Subtotal:</label>
+                <input type="text" formControlName="subtotal" pInputText>
+            </div>
+
+            <div class="field">
+                <button type="button" (click)="removeShoppingDetail(i)" class="p-button p-button-danger mt-5">
+                    <i class="pi pi-trash"></i>
+                </button>
+            </div>
         </div>
     </div>
-    
-    
 
-
-
-
-</div>
-
-
+    <button type="button" (click)="addShoppingDetail()" class="p-button p-button-secondary mr-3">
+        <i class="pi pi-plus"></i> Agregar Detalle
+    </button>
+    <button type="submit" class="p-button p-button-success">Guardar Compra</button>
+</form>
